# CodeCollection

./: CMakeLists.txt
include/codecollection/TwoState/: TwoState.hpp  TwoStateArray.hpp  TwoStateCommon.hpp
test/: TestBase.cpp  TwoStateTest.cpp
